LIST OF CHANGES
---------------

 - archival of logs is run after a move to outgoing - paths adjusted

release 49.7
 - seq-alignment - P4 and new bwa for older chemistries & forcing mem for alt references
 - bug fix after passing RG paramater to illumina2bam: change SplitBamByReadGroup options:
     do not set OUTPUT_COMMON_RG_HEAD_TO_TRIM, strip last component (runid_lane) from
     OUTPUT_PREFIX
 - use threading for bam and cram creation in seq_alignment
   references and GCLP
 - add attribute "gclp" common to analysis and archival scripts
 - function list config files always contain pipeline module name e.g. central

release 49.6
 - pass RG paramater to illumina2bam
 - add archive::file::logs

release 49.5
 - correctly determine path to SplitBamByChromosomes.jar
 - drop redundant do_markduplicates and not_strip_bam_tag options from args list
   of the old-style bam alignment script
 - factor out generation of bam_flagstats metics into a method
 - call new bam_flagstats execute method instead of invoking individual parsers explicitly -
   forward compatibility
 - npg_pipeline::cache - reuse_cache_only option added RT#486264
 - check for an inline index when calculating index_length

release 49.4
 - LSF job creation for autoqc checks - use qc check objects directly when
   testing whether to create a job

release 49.3
 - error if padding for spiked Phix index sequence is not long enough
 - kill unwanted jobs efficiently (one command for all ids and -b option)
 - call warehouse loaders with verbose option
 - call ml warehouse loader at the end of the analysis pipeline so that the product
   table is loaded by the time the run goes into QC thus allowing to query this
   warehouse using run id
 - simplified name generation for fastq files
 - use 'subset' option of the bam_flagstast autoqc result instead
   of the 'human_split' option
 - allow p4 to be used where no alignment is specified for target but human
     split (contains_nonconsented_human) is