@@ -1,7 +1,9 @@
 LIST OF CHANGES
 ---------------
 
- - archival of logs is run after a move to outgoing - paths adjusted
+ - archival of logs should run after an asynchronous move to outgoing (peformed by the
+   staging daemon) - paths adjusted and job preexec checking for the existence of the
+   runfolder in outgoing is added
 
 release 49.7
  - seq-alignment - P4 and new bwa for older chemistries & forcing mem for alt references
